--- a/css/styles.css
+++ b/css/styles.css
@@ -203,6 +203,20 @@ img {
   justify-content: center;
   gap: 24px;
 }
+
+.container-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 264px;
+  height: 112px;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  width: 264px;
+  height: 112px;
+  background-color: #f4f4fd;
+}
+
 .benefits-item {
   font-weight: 500;
   font-size: 20px;
@@ -272,8 +286,34 @@ img {
   letter-spacing: 0.02em;
   text-align: center;
   color: #434455;
+  margin-bottom: 8px;
+}
+.social-media {
+  display: flex;
+  gap: 24px;
+  align-items: center;
+  justify-content: center;
+}
+.social-media-icons {
+  width: 40px;
+  height: 40px;
+  fill: #f4f4fd;
 }
 
+.social-link {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.social-link:hover,
+.social-link:focus {
+  background-color: #404bbf;
+}
 /* Portfolio products*/
 .section-four {
   padding: 120px 0 120px 0;
@@ -299,12 +339,33 @@ img {
 .portfolio-list-item {
   width: calc((100% - 48px) / 3);
 }
+
+.container-image {
+  position: relative;
+  overflow: hidden;
+}
 .portfolio-image {
   display: block;
   max-width: 100%;
   height: auto;
 }
+.portfolio-list-item:hover .overlay-text {
+  transform: translateY(0%);
+}
 
+.overlay-text {
+  position: absolute;
+  top: 0;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  padding: 40px 32px;
+  background-color: #4d5ae5;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translateY(100%);
+}
 .portfolio-item-content {
   padding: 32px 16px;
   border-bottom: 1px solid #e7e9fc;
