--- a/css/styles.css
+++ b/css/styles.css
@@ -338,33 +338,38 @@ img {
 
 .portfolio-list-item {
   width: calc((100% - 48px) / 3);
-}
-
-.container-image {
   position: relative;
   overflow: hidden;
+}
+
+.overlay-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #4d5ae5;
+  width: 100%;
+  height: 100%;
+  padding: 40px 32px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-image {
   display: block;
   max-width: 100%;
   height: auto;
 }
-.portfolio-list-item:hover .overlay-text {
+.portfolio-list-item:hover .overlay-image {
   transform: translateY(0%);
 }
 
 .overlay-text {
   position: absolute;
   top: 0;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #f4f4fd;
-  padding: 40px 32px;
-  background-color: #4d5ae5;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transform: translateY(100%);
 }
 .portfolio-item-content {
   padding: 32px 16px;
