--- a/css/styles.css
+++ b/css/styles.css
@@ -142,7 +142,13 @@ img {
 .section-main {
   background: #2e2f42;
   padding: 188px 0;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/people-office.jpg);
 }
+
 .main-header {
   margin-top: 0;
   margin-left: auto;
@@ -338,6 +344,10 @@ img {
 
 .portfolio-list-item {
   width: calc((100% - 48px) / 3);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.container-img {
   position: relative;
   overflow: hidden;
 }
@@ -404,6 +414,21 @@ img {
   color: #f4f4fd;
 }
 
+.footer-container {
+  display: flex;
+  align-items: baseline;
+}
+.footer-container-media {
+  margin-left: 120px;
+}
+.footer-social-media {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
+  margin-bottom: 16px;
+}
 .footer-logo {
   display: inline-block;
   margin-bottom: 16px;
@@ -412,4 +437,19 @@ img {
 .page-footer {
   padding: 100px 0;
   background-color: #2e2f42;
+}
+
+.footer-social-link {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-social-link:hover,
+.footer-social-link:focus {
+  background-color: #31d0aa;
 }
