--- a/css/styles.css
+++ b/css/styles.css
@@ -85,12 +85,10 @@ img {
   padding: 24px 0;
   font-weight: 500;
   font-size: 16px;
-
-  /* line-height: 24px; */
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
-  transition: color 250ms, cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-link.current {
@@ -116,7 +114,7 @@ img {
 .contacts {
   font-style: normal;
   margin-left: auto;
-  transition: color 250ms, cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contacts-link {
@@ -124,12 +122,10 @@ img {
   padding: 24px 0;
   font-weight: 400;
   font-size: 16px;
-
-  /* line-height: 24px; */
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
-  transition: color 250ms, cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav-link:hover,
 .nav-link:focus,
@@ -140,6 +136,11 @@ img {
 }
 
 .section-main {
+  max-width: 1440px;
+  margin: 0 auto;
+  background-repeat: no repeat;
+  background-position: center;
+  background-size: cover;
   background: #2e2f42;
   padding: 188px 0;
   background-image: linear-gradient(
@@ -180,6 +181,7 @@ img {
   text-align: center;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button:hover,
@@ -221,6 +223,7 @@ img {
   width: 264px;
   height: 112px;
   background-color: #f4f4fd;
+  margin-bottom: 8px;
 }
 
 .benefits-item {
@@ -375,6 +378,8 @@ img {
 }
 .portfolio-list-item:hover .overlay-image {
   transform: translateY(0%);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .overlay-text {
