--- a/css/styles.css
+++ b/css/styles.css
@@ -299,7 +299,7 @@ img {
 }
 .social-media {
   display: flex;
-  gap: 24px;
+  gap: 16px;
   align-items: center;
   justify-content: center;
 }
@@ -378,10 +378,11 @@ img {
 }
 .portfolio-list-item:hover .overlay-image {
   transform: translateY(0%);
+}
+.portfolio-list-item:hover {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
-
 .overlay-text {
   position: absolute;
   top: 0;
@@ -423,8 +424,8 @@ img {
   display: flex;
   align-items: baseline;
 }
-.footer-container-media {
-  margin-left: 120px;
+.footer-block {
+  margin-right: 120px;
 }
 .footer-social-media {
   font-weight: 500;
